<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cauvong.softwarearchitecture.LoginActivity"
    android:orientation="vertical">

    <android.support.percent.PercentRelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_login">

        <LinearLayout
            app:layout_marginTopPercent="20%"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/txt_Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Modeling"
                android:textColor="#D3D3D3"
                android:textSize="40sp"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_marginTopPercent="35%"
            android:id="@+id/form_login"
            android:padding="30dp"
            android:focusableInTouchMode="false"
            android:alpha="100">

            <ImageView
                android:layout_height="@dimen/login_holder_height"
                android:layout_width="@dimen/login_holder_height"
                android:tint="#ffffff"
                android:src="@drawable/user_icon"
                android:id="@+id/mainImageView1"
                android:layout_marginBottom="30dp"/>

            <ImageView
                android:layout_height="@dimen/login_holder_height"
                android:layout_width="@dimen/login_holder_height"
                android:layout_marginTop="20dp"
                android:tint="#ffffff"
                android:src="@drawable/password_icon"
                android:layout_below="@id/mainImageView1"
                android:id="@+id/mainImageView2"/>

            <EditText
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:ems="10"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/mainImageView1"
                android:layout_marginStart="20dp"
                android:background="@null"
                android:textSize="20sp"
                android:layout_alignTop="@id/mainImageView1"
                android:layout_alignBottom="@id/mainImageView1"
                android:textColor="#FFFFFF"
                android:id="@+id/edt_email"
                android:hint="@string/hint_email"
                android:textColorHint="#D3D3D3"
                android:typeface="serif"/>

            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:layout_below="@id/edt_email"
                android:background="#FFFFFF"
                android:layout_marginTop="@dimen/login_horizontalline_spacing"/>

            <EditText
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:ems="10"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/mainImageView2"
                android:layout_marginStart="20dp"
                android:background="@null"
                android:textSize="20sp"
                android:layout_alignTop="@id/mainImageView2"
                android:layout_alignBottom="@id/mainImageView2"
                android:textColor="#FFFFFF"
                android:id="@+id/edt_password"
                android:hint="@string/hint_password"
                android:textColorHint="#D3D3D3"
                android:typeface="serif"/>

            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:layout_below="@id/edt_password"
                android:background="#FFFFFF"
                android:layout_marginTop="@dimen/login_horizontalline_spacing"/>

        </RelativeLayout>

        <LinearLayout
            app:layout_marginTopPercent="66%"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/btnLogin"
                style="@style/LoginButtonsStyle"
                android:background="@drawable/btn_login"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textStyle="bold"
                android:textColor="#D3D3D3"
                android:textSize="20sp"
                android:onClick="signIn"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_anonymous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_marginTopPercent="80%"
            android:gravity="center">

            <Button
                android:id="@+id/btnAnonymousLogin"
                style="@style/LoginButtonsStyle"
                android:background="@drawable/btn_anonymous"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/anonymous_login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textAllCaps="false"
                android:textSize="17sp"
                android:textStyle="italic"
                android:onClick="firebaseAnonymousAuth"/>

        </LinearLayout>

        <LinearLayout
            android:layout_below="@id/layout_anonymous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#D3D3D3"
                android:textStyle="italic"
                android:text="@string/do_not_account"/>


            <TextView
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#D3D3D3"
                android:textStyle="bold|italic"
                android:text="@string/sign_up"
                android:onClick="createAccount"/>

        </LinearLayout>
    </android.support.percent.PercentRelativeLayout>

</android.support.constraint.ConstraintLayout>
